Fix UI alignment issue in route summary display
The kind-of-route icon for each calculated route appeared on a separate
line (it only appeared in the same line in very large displays)

--- a/css/route.css
+++ b/css/route.css
@@ -40,10 +40,6 @@ figcaption.title {
 	 border-top-left-radius: 50px !important;
 }
 
-.timer {
-	 width: 120px;
-}
-
 .route-img-summary {
 	 margin-top: 20px;
 }
